# qmrKG

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  QWEN.md  README.md  config.yaml  docker-compose.neo4j.yml  examples.py  main.py  pyproject.toml  reviewed.pptx  task.md  tokscale-export-20260428-181846.json
analysis/: audit_report.md  sample_results.json  triple_quality_audit.py
data/: data-analisys.py  data-analysis.md
data/eval/: _provenance_issues.json  _provenance_map.json  _rejection_log.json  baseline_report.json  baseline_report.md  batch_0_13.json  batch_14_27.json  batch_28_41.json  batch_42_55.json  gold_annotation_review.md  gold_pure.json  gold_triples.500_reviewed.json  gold_triples.agent_candidate.json  gold_triples.json  llm_judge_align.json  llm_judge_fs_recheck.json  llm_judge_smoketest.json  relaxed_fs-nocheck.json  sample_manifest.json  (+7 more)
docs/: defense-ppt-script.md  pipeline-task-gap-list.md  thesis-condensed.md
frontend/: AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml
scripts/: eval_llm_judge.py  eval_relaxed.py  eval_relaxed_raw.py  pull-triples.sh  push-triples.sh  sample_gold.py
tests/: AGENTS.md  test_cli_agent_harness.py  test_cli_eval.py  test_cli_kg_extract.py  test_cli_qmr.py  test_cli_stage_commands.py  test_config.py  test_evaluation.py  test_kg_extractor.py  test_kg_merger.py  test_kg_merger_embedding.py  test_kg_neo4j.py  test_kg_schema.py  test_llm_factory.py  test_main.py  test_markdown_chunker.py  test_ner_eval.py  test_ner_prompts.py  test_pdf_to_png.py  test_pipeline.py  test_png_to_text.py
(+114 files in other folders)
