[project]
name = "qmrkg"
version = "0.1.0"
description = "PDF to Text pipeline for Knowledge Graph construction"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymupdf>=1.23.0",      # PDF 处理
    "openai>=1.0.0",        # PPIO OpenAI-compatible client
    "pillow>=10.0.0",       # 图像处理
    "python-dotenv>=1.0.0", # .env loading
    "tiktoken>=0.7.0",      # Token counting for chunking
    "tqdm>=4.66.0",         # 进度条
    "pyyaml>=6.0.0",        # YAML 配置解析
    "neo4j>=5.0.0",         # Neo4j 图数据库驱动
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
qmrkg = "qmrkg.cli_qmrkg:main"
pdftopng = "qmrkg.cli_pdf_to_png:main"
pngtotext = "qmrkg.cli_png_to_text:main"
mdchunk = "qmrkg.cli_md_chunk:main"
kgextract = "qmrkg.cli_kg_extract:main"
kgmerge = "qmrkg.cli_kg_merge:main"
kgneo4j = "qmrkg.cli_kg_neo4j:main"
qmrkg-harness = "qmrkg.cli_agent_harness:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
